fixed menu styling on small screen sizes

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -241,8 +241,11 @@ a {
   }
   .post-btn {
     background-color:transparent;
-    &:hover{
-     background-color:transparent;
+    &:hover {
+     background-color:transparent!important;
+    }
+    &:focus {
+     background-color:transparent!important;
     }
   }
 }
